<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wangcai</string>
    <string name="hello_world">123123</string>
    <string name="action_settings">Settings</string>
	<string name="app_description">旺财</string>
	<string name="balance">账户余额:</string>
	<string name="rmb_symbol">￥</string>
	<string name="balance_unit">元</string>
	<string name="sign_in">签到捡钱</string>
	<string name="extract_cash">提取现金</string>
	<string name="recommand_task">推荐任务</string>
	<string name="remain_task_money">今天还能赚：</string>

	<!--
	<string name="invite_member_title">填写邀请人</string>
	<string name="invite_member_tip">与好友一起旺财，填写后领取2元红包</string>
	<string name="app_wall_title">应用体验中心</string>
	<string name="app_wall_tip">体验不同的应用赚红包</string>
	<string name="level_title">旺财升级到LV%1$d</string>
	<string name="level_tip">再赚%1$s元，即可升级领红包</string>
	<string name="install_wangcai_title">安装旺财</string>
	<string name="install_wangcai_tip">安装旺财获得1元红包</string>
	<string name="record_info_title">填写个人资料</string>
	<string name="record_info_tip">填写个人资料即可1元红包</string>
	<string name="comment_wangcai_title">好评旺财</string>
	<string name="comment_wangcai_tip">红包虽小，旺财真心希望得到您的好评</string>
	<string name="share_title">晒单有奖</string>
	<string name="share_tip">与好友分享旺财成果</string>
	<string name="show_complete_tasks">点击查看已经领取的红包</string>
	-->

	<string name="task_complete">已完成</string>

	
	<string name="menu">菜单</string>
	<string name="my_wangcai">我的旺财</string>
	<string name="cash_extract">现金提取</string>
	<string name="task_detail">交易明细</string>
	<string name="exchange_gift">超值兑换</string>
	<string name="get_money_by_invite">邀请送红包</string>
	<string name="options">功能设置</string>
	<string name="help">客服帮助</string>
	

	<string name="show_complete_task">点击查看已领取的红包</string>

	<string name="level_label">等级：</string>
	<string name="level_unit">级</string>	
	<string name="level_privilege_tip">可获得%1$s%%额外的红包</string>
	
	<string name="write_invite_code_tip">输入邀请码</string>
	<string name="my_invite_code_tip">我的邀请码</string>
	<string name="invite_other">邀请好友</string>
	<string name="the_one_invite_me">谁邀请我</string>
	<string name="input_code_tip">请输入邀请码</string>

	<string name="my_level">我的等级</string>
	<string name="close_button">关闭</string>
	<string name="loading_text">处理中，请稍后……</string>
	<string name="cancel_text">取消</string>
	<string name="ok_text">确定</string>
	<string name="retry_text">重试</string>
	<string name="exit_text">重试</string>
	<string name="attention_text">注意</string>

	<string name="bind">绑定</string>
	<string name="bind_phone">绑定手机</string>
	<string name="china_area">中国地区</string>
	<string name="hint_bind_phone">尚未绑定手机，请先绑定手机</string>
	<string name="hint_input_phone_number">请输入手机号</string>
	<string name="hint_invlide_phoneNumber">请输入有效的手机号码</string>
	<string name="hint_bind_phone_limit">一个手机号一个月内最多绑定3台设备，你已绑定了第%d台设备，请谨慎使用剩余机会。</string>
	<string name="bind_phone_count_down">%1$d秒后重发</string>
	<string name="hint_send_sms_fail">发送验证短信失败</string>
	<string name="hint_invite_captcha">请输入5位数的验证码</string>
	<string name="hint_verifying_captcha">正在检验验证码……</string>
	<string name="hint_verify_captcha_fail">验证码错误，请重新输入</string>
	<string name="hint_invlide_invite_code">请输入正确的邀请码</string>
	<string name="hint_bind_invite_code_succeed">绑定邀请人成功</string>
	<string name="hint_bind_invite_code_fail">绑定邀请人失败</string>
	

	<string name="resend">重新发送</string>
	
	<string name="hint_over_5_yuan_bind_phone">您已积累了超过5元红包，为了红包的安全建议立即绑定手机号。</string>
	<string name="hint_sward_share">恭喜您中奖，快来分享给朋友们吧！</string>
	<string name="hint_update_wangcai">发现新版旺财！更安全更好赚，请立即升级。</string>
	<string name="hint_network_error">当前网络不可用，请检查网络连接</string>
	<string name="hint_new_install_award">新装旺财获得红包</string>
	<string name="hint_duplicate_signin">今天已经签到过了，明天记得来哟</string>

	<string name="user_info_title">填写信息</string>
	<string name="my_infomation">我的信息</string>
	<string name="my_infomation_hint">信息越准确，任务越符合你的喜好</string>
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="age">年龄</string>
	<string name="select_help_hint">请输入你感兴趣的关键字（多选）</string>
	<string name="userinfo_relaxation_game">休闲游戏</string>
	<string name="userinfo_rpg_game">升级打宝</string>
	<string name="userinfo_ebuy">打折促销</string>
	<string name="userinfo_social_contact">结交朋友</string>
	<string name="userinfo_travel">旅行生活</string>
	<string name="userinfo_competitive_game">竞技游戏</string>
	<string name="userinfo_sport">强身健体</string>
	<string name="userinfo_beautify">美丽达人</string>
	<string name="userinfo_confirm">确认并领取1元</string>
	<string name="hint_select_interest">请选择至少一个兴趣</string>
	<string name="hint_select_age">请选择年龄</string>
	<string name="hint_select_sex">请选择性别</string>

	<string name="task_level_limit_hint">该任务需要等级达到%1$d级才能进行</string>

	<string name="wangcai_share">旺财分享</string>
	<string name="share_content">我用旺财赚了%1$f元，你也可以的，填我的邀请码%2$s可领取2元红包。旺财下载地址:%3$s</string>

	<string name="phone_bill">手机话费</string>
	<string name="paypal">支付宝</string>
	<string name="tecent_qbi">腾讯Q币</string>
	<string name="extract_money_hint">即时到帐，多重多送</string>
	<string name="recharge">充值</string>

	<string name="exchage">兑换</string>
	<string name="gift_price_count">价格：%1$d元，剩余：%2$d</string>
	<string name="jidong_card_50">50元京东商品卡</string>

	<string name="xunlei_white_gold_card">迅雷白金会员月卡</string>

	<string name="usable_balance">可用余额：%1$d元</string>
	
	<string name="app_wall_win_title">安装应用获得丰厚奖励</string>
	<string name="app_wall_win_text">请按应用要求安装并试玩一段时间后(部分要求注册)，返回旺财即可领取红包。部分时间由于网络延迟，红包不能立即到账，请耐心等待。注意：相同的应用只能领取一次奖励，且在在接受任务前已安装的应用不能领取红包。</string>
	<string name="important_tip">重要提示</string>
	<string name="more">更多</string>
	
	<string name="return_text">返回</string>

	<string name="youmi_app_wall">有米体验中心</string>
	<string name="chukong_app_wall">触控体验中心</string>
	<string name="mopan_app_wall">磨盘体验中心</string>
	<string name="midi_app_wall">米迪体验中心</string>
	<string name="jupeng_app_wall">巨鹏体验中心</string>
	
	
	<string name="test_return_text">返回</string>
	<string name="test_invlide_code">XDFEFS</string>
	<string name="test_invlide_url">http://www.google.com</string>
	<string name="test_share_button">分享赚红包</string>
	<string name="test_get_reword">领取2元</string>
</resources>
