<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="420dp"
    android:orientation="vertical" >

	<LinearLayout
		android:id="@+id/default_page"
		android:layout_width="360dp"
		android:layout_height="420dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:orientation="vertical" >
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_wall_win_title"
		/> 
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_wall_win_text"
		/> 
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/important_tip"
		/> 
		<Button 
			android:id="@+id/app_wall1"
			android:text="@string/youmi_app_wall" 
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
		<Button 
			android:id="@+id/app_wall2"
			android:text="@string/chukong_app_wall" 
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
		<Button 
			android:id="@+id/more_button"
			android:text="@string/more" 
			android:layout_width="50dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
	</LinearLayout>
	<LinearLayout
		android:id="@+id/more_appwall_page"
		android:layout_width="360dp"
		android:layout_height="420dp"
		android:orientation="vertical" >
		<Button 
			android:id="@+id/return_button"
			android:text="@string/return_text" 
			android:layout_width="50dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
		<Button 
			android:id="@+id/app_wall3"
			android:text="@string/mopan_app_wall" 
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
		<Button 
			android:id="@+id/app_wall4"
			android:text="@string/midi_app_wall" 
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
		<Button 
			android:id="@+id/app_wall5"
			android:text="@string/jupeng_app_wall" 
			android:layout_width="120dp"
			android:layout_height="30dp"
			android:layout_marginBottom="10dp"
			/> 
	</LinearLayout>
</LinearLayout>