<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:orientation="vertical">
	<com.example.wangcai.ctrls.TitleCtrl xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<Button 
			android:id="@+id/invite_other"
			android:text="@string/invite_other" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/> 
		<Button 
			android:id="@+id/the_one_invite_me"
			android:text="@string/the_one_invite_me" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/> 
	</LinearLayout>
	<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<!--  邀请别人 -->		
		<LinearLayout 
			android:id="@+id/invite_panel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"  >
			<ImageView
				android:id="@+id/qrcode"
				android:layout_marginTop="45dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	/>
			<TextView 
				android:id="@+id/my_invite_code_tip"
				android:layout_marginTop="45dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	
				android:text="@string/my_invite_code_tip" /> 
			<TextView 
				android:id="@+id/invite_code"	
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	
				android:text="@string/test_invlide_code" /> 
			<LinearLayout
				android:layout_marginTop="45dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >
					<TextView 
						android:id="@+id/invite_url"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"	
						android:text="@string/test_invlide_url" /> 
					<Button 
						android:id="@+id/copy_url_button"
						android:src="@drawable/invite_copy_button"
						android:layout_width="80dp"
						android:layout_height="30dp" 
					/> 
			</LinearLayout>
			<Button 
				android:layout_marginTop="45dp"
				android:id="@+id/share_button"
				android:text="@string/test_share_button"
				android:layout_width="match_parent"
				android:layout_height="40dp" /> 
		</LinearLayout>
		<!--  填写邀请码 -->
		<LinearLayout
			android:id="@+id/invite_code_panel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:orientation="vertical"
			android:visibility="gone">
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	
				android:text="@string/write_invite_code_tip" /> 
			<EditText 
				android:id="@+id/code_editor"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginTop="45dp"
				android:layout_marginBottom="45dp"
				android:hint="@string/input_code_tip" /> 
			<Button 
				android:id="@+id/get_reward_button"
				android:layout_width="match_parent"
				android:text="@string/test_get_reword"
				android:layout_height="50dp"	/> 
		</LinearLayout>
	</FrameLayout>
</LinearLayout>
