<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:wangcai = "http://schemas.android.com/apk/res/com.example.wangcai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<com.example.wangcai.ctrls.TitleCtrl
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		wangcai:titleText ="@string/bind_phone" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:orientation="horizontal" >

			<TextView 
				android:text="@string/china_area"	
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/> 
			<ImageView
				android:src="@drawable/register_phone_logo"
				android:layout_marginLeft="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				/>	
			<EditText 
			    android:id="@+id/phone_number_edit"
				android:layout_width="190dp"
				android:layout_height="wrap_content"
				android:maxLength="11"
				android:hint="@string/hint_input_phone_number"
				android:layout_gravity="right" 
				android:phoneNumber="true"
			/>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:orientation="horizontal" >

		<EditText 
			android:id="@+id/captcha_edit"
			android:layout_width="190dp"
			android:layout_height="wrap_content"
			android:maxLength="5"
			android:inputType="number"
			android:visibility="gone"
		/>
		<TextView 
			android:id="@+id/count_down_text"	
			android:text="@string/bind_phone_count_down"	
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:visibility="gone"
		/> 
		<TextView 
			android:id="@+id/resend_text"	
			android:text="@string/resend"	
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:visibility="gone"
		/> 
		<ImageButton
			android:id="@+id/get_captcha_button"
			android:layout_marginTop="50dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/register_get_captcha"
			android:layout_gravity="right" />
	</LinearLayout>
			
	<ImageButton
		android:id="@+id/next_button"
		android:layout_marginTop="50dp"
		android:enabled="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/register_next_button_normal" />
</LinearLayout>
